[fix] adjust h1 font-size from 6rem to 5rem to avoid overflow

--- a/src/BackendProjects.css
+++ b/src/BackendProjects.css
@@ -10,5 +10,5 @@
 }
 
 .projects-content h1 {
-  font-size: 6rem;
+  font-size: 5rem;
 }
