--- a/src/LandingPage.css
+++ b/src/LandingPage.css
@@ -9,7 +9,7 @@
 }
 
 .landing-title {
-    font-size: 6rem;
+    font-size: 5rem;
 }
 
 .landing-body {
